<resources>
    <string name="app_name">Task Forge</string>

    <!-- Authentication -->
    <string name="auth_failed">Authentication failed</string>
    <string name="name_button_text">Set name</string>
    <string name="signed_out">Signed Out</string>
    <string name="create_account">Create Account</string>
    <string name="loading">Loading…</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="name_hint">e.g: Chris</string>
    <string name="sign_in">Sign In</string>

    <!-- Task Forge -->
    <string name="action_log_out">Sign out</string>
    <string name="action_tutorial">Tutorial</string>

    <!-- Nav. Drawer -->
    <string name="generalTab">General</string>
    <string name="aboutTab">About</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- About -->
    <string name="developedBy_text">Developed By</string>
    <string name="developerName_text">Christopher Kadé</string>
    <string name="email_text">E-mail</string>
    <string name="email_value">c.kade96@gmail.com</string>
    <string name="action_settings">Settings</string>

    <!-- Settings -->
    <string name="settings_title">Settings</string>
    <string name="settings_delete_on_check">Delete item on checked</string>
    <string name="settings_move_item_on_check">Move completed tasks to end</string>
    <string name="settings_notifications">Allow notificationHandler</string>
    <string name="settings_language">Language</string>
    <string name="settings_default_not_time">Notify me before an event (hours)</string>
    <string name="settings_language_set">Language: English</string>

    <string name="action_add_list">Add list</string>

    <string name="list_name_text">List name:</string>
    <string name="action_delete_list">Delete list</string>
    <string name="available_lists_text">Available lists:</string>

    <!-- Dialogs -->
    <string name="dialog_title">Title:</string>
    <string name="dialog_content">Content:</string>
    <string name="dialog_date">DD/MM/YYYY</string>
    <string name="dialog_list_name">List name:</string>

    <!-- Text -->
    <string name="deleted_text">deleted</string>
    <string name="created_text">created</string>
    <string name="text_required">Required</string>

    <!-- Buttons -->
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_add">Add</string>

    <!-- Toast -->
    <string name="toast_already_exists">Already exists</string>
    <string name="toast_no_list_found">No list found</string>

    <!-- Languages -->
    <string name="language_english">English</string>
    <string name="language_french">French</string>

    <!-- Tutorial -->
    <string name="tutorial_fab_title">Event creation</string>
    <string name="tutorial_fab_description">You may click on this button to create events</string>
    <string name="tutorial_list_title">Edition, deletion and details</string>
    <string name="tutorial_list_description">You may edit, delete or view events in detail by clicking on them in the list</string>
    <string name="tutorial_list_creation_title">List creation</string>
    <string name="tutorial_list_creation_description">You may organize your events in lists by clicking here</string>
    <string name="tutorial_list_deletion_title">List deletion</string>
    <string name="tutorial_list_deletion_description">You may delete unwanted lists by clicking here</string>
    <string name="tutorial_list_navigation_title">List navigation</string>
    <string name="tutorial_list_navigation_description">You may navigate through your lists by clicking on this button</string>

    <string name="dialog_the">The</string>
    <string name="dialog_at">At</string>
    <string name="content_desc_calendar">date_selection_calendar</string>

    <string-array name="array_languages">
        <item>English</item>
        <item>French</item>
    </string-array>

    <string name="edit">Edit</string>
    <string name="delete">Delete</string>

    <string name="tab_no_longer_exists_text">The list you have selected no longer exists</string>
</resources>
