<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="trakr.kade_c.test.MainActivity"
    android:id="@+id/action_menu">

    <group
        android:id="@+id/main_menu_group">
        <item
            android:id="@+id/action_add_list"
            android:icon="@mipmap/add_icon"
            android:title="@string/action_add_list"
            app:showAsAction="ifRoom" />

        <item android:id="@+id/action_delete_list"
            android:icon="@mipmap/delete_icon"
            android:title="@string/action_delete_list"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/action_settings"
            android:icon="@mipmap/settings_icon"
            android:title="@string/action_settings" />

        <item
            android:id="@+id/action_tutorial"
            android:title="@string/action_tutorial"/>

        <item
            android:id="@+id/action_about"
            android:title="@string/aboutTab" />

        <item
            android:id="@+id/action_log_out"
            android:icon="@mipmap/log_off_icon"
            android:title="@string/action_log_out" />
    </group>
</menu>
