<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <CheckBoxPreference
        android:key="pref_delOnCheck"
        android:title="@string/settings_delete_on_check"
        android:defaultValue="false" />

    <CheckBoxPreference
        android:key="pref_moveOnCheck"
        android:title="@string/settings_move_item_on_check"
        android:defaultValue="false" />

    <CheckBoxPreference
        android:key="pref_notifications"
        android:title="@string/settings_notifications"
        android:defaultValue="true" />

    <ListPreference
        android:key="pref_language"
        android:title="@string/settings_language"
        android:entries="@array/array_languages"
        android:entryValues="@array/array_languages"
        android:defaultValue="@string/language_english"
        android:icon="@mipmap/globe_icon"
        android:summary="@string/language_english"/>

</PreferenceScreen>