<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">


    <TextView
        android:text="@string/developedBy_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="27dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="31dp"
        android:id="@+id/developpedBy_text" />

    <TextView
        android:text="@string/email_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/developpedBy_text"
        android:layout_alignLeft="@+id/developpedBy_text"
        android:layout_alignStart="@+id/developpedBy_text"
        android:layout_marginTop="30dp"
        android:id="@+id/email_text" />

    <TextView
        android:text="@string/email_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/email_text"
        android:layout_alignLeft="@+id/developerName_text"
        android:layout_alignStart="@+id/developerName_text"
        android:id="@+id/email_value"
        android:textColor="@color/mainColor" />

    <TextView
        android:text="@string/developerName_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/developerName_text"
        android:textColor="@color/mainColor"
        android:layout_alignBaseline="@+id/developpedBy_text"
        android:layout_alignBottom="@+id/developpedBy_text"
        android:layout_toRightOf="@+id/developpedBy_text"
        android:layout_toEndOf="@+id/developpedBy_text"
        android:layout_marginLeft="39dp"
        android:layout_marginStart="39dp" />

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:srcCompat="@mipmap/github"
        android:layout_marginLeft="28dp"
        android:layout_marginStart="28dp"
        android:id="@+id/githubImg"
        android:layout_alignTop="@+id/linkdinImg"
        android:layout_toRightOf="@+id/linkdinImg"
        android:layout_toEndOf="@+id/developpedBy_text" />

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:srcCompat="@mipmap/fb_logo"
        android:id="@+id/facebookImg"
        android:layout_alignTop="@+id/githubImg"
        android:layout_alignRight="@+id/email_value"
        android:layout_alignEnd="@+id/email_value" />

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:srcCompat="@mipmap/linkedinlogo"
        android:id="@+id/linkdinImg"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:layout_below="@+id/email_text"
        android:layout_alignLeft="@+id/email_text"
        android:layout_alignStart="@+id/email_text" />
</RelativeLayout>